--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <header >
             <div class="main-container header">
                 <div class="logo">
-                    <img src="/images/logo.png" alt="">
+                    <img src="./images/logo.png" alt="">
                 </div>
                 <nav>
                     <ul>
