--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
                             <button>follow us</button>
 
                         </div>
-                        <ul class="social-list__insta article-container">
+                        <ul class="social-list__insta">
                             <li>
                                 <img src="./images/insta_img_1.svg" alt="">
                             </li>
@@ -463,24 +463,7 @@
                             <li>
                                 <img src="./images/insta_img_6.svg" alt="">
                             </li>
-                            <li>
-                                <img src="./images/insta_img_1.svg" alt="">
-                            </li>
-                            <li>
-                                <img src="./images/insta_img_2.svg" alt="">
-                            </li>
-                            <li>
-                                <img src="./images/insta_img_3.svg" alt="">
-                            </li>
-                            <li>
-                                <img src="./images/insta_img_4.svg" alt="">
-                            </li>
-                            <li>
-                                <img src="./images/insta_img_5.svg" alt="">
-                            </li>
-                            <li>
-                                <img src="./images/insta_img_6.svg" alt="">
-                            </li>
+                           
                         </ul>
                     </li>
                     <li class="social-list__item">
