--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <img src="./images/logo.png" alt="" />
                 </div>
                 <nav>
-                    <ul>
+                    <ul class="nav-list">
                         <li class="nav-list__item">
                             <a href="">Menu</a>
                         </li>
@@ -449,29 +449,14 @@
                             <button>follow us</button>
 
                         </div>
-                        <div class="social-list__insta-container">
                             <ul class="social-list__insta">
-                                <li>
-                                    <img src="./images/insta_img_1.svg" alt="">
-                                </li>
-                                <li>
-                                    <img src="./images/insta_img_2.svg" alt="">
-                                </li>
-                                <li>
-                                    <img src="./images/insta_img_3.svg" alt="">
-                                </li>
-                                <li>
-                                    <img src="./images/insta_img_4.svg" alt="">
-                                </li>
-                                <li>
-                                    <img src="./images/insta_img_5.svg" alt="">
-                                </li>
-                                <li>
-                                    <img src="./images/insta_img_6.svg" alt="">
-                                </li>
-
+                                <li class="social-list__insta-img_1 img-container"></li>
+                                <li class="social-list__insta-img_2 img-container"></li>
+                                <li class="social-list__insta-img_3 img-container"></li>
+                                <li class="social-list__insta-img_4 img-container"></li>
+                                <li class="social-list__insta-img_5 img-container"></li>
+                                <li class="social-list__insta-img_6 img-container"></li>
                             </ul>
-                        </div>
 
                     </li>
                     <li class="social-list__item">
