--- a/index.html
+++ b/index.html
@@ -463,5 +463,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/js-polyfills/0.1.43/polyfill.min.js"
     integrity="sha512-lvWiOP+aMKHllm4THsjzNleVuGOh0WGniJ3lgu/nvCbex1LlaQSxySUjAu/LTJw9FhnSL/PVYoQcckg1Q03+fQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="./js/index.js" type="module"></script>
 
 </html>
